Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15018

LibreOffice uses Monospaced font for complete UI

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.10
    • None
    • 0.4.10-dev-466-g35f62fc ([WIN32SS][FONT] Fix font metrics)

    Description

      In ROS 0.4.10 RC22 I found that both RAPPS versions of LibreOffic (5.1 and 5.4) show their complete user interface with a monospaced font (not Courier but something similar), whereas in ROS 0.4.9 and previous releases a "normal" sans-serif font UI font was used.

      Needless to say, the monospaced font looks awful especially in dialogs. See attached screenshots.

      The LO5.1 vs. 5.4 tests were performed on two different virtual machines, so this is reproducible for me.

      Attachments

        1. LO54_ROS410_Monospaced.PNG
          102 kB
          Matthias Basler
        2. LO54_ROS410_Monospaced_Sidebar.PNG
          42 kB
          Matthias Basler
        3. LO51_ROS49_FontNormal.PNG
          28 kB
          Matthias Basler
        4. FontPenaltyReverted_OnTopOf_0.4.10-RC-22-gd3cc081__looksOk.png
          51 kB
          reactosfanboy
        5. font-penalty-revert.patch
          2 kB
          Katayama Hirofumi MZ
        6. debug_LO54_MonospacedFont_ROS0410.log
          74 kB
          Matthias Basler
        7. CORE-15018_RegressionTest.txt
          0.3 kB
          reactosfanboy
        8. 0.4.10-dev-465-g956086d__stillOk.png
          54 kB
          reactosfanboy

        Activity

          People

            reactosfanboy reactosfanboy
            matthiasbasler Matthias Basler
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: