[FREETYPE] Fix Regression "Monospaced font in LibreOffice" CORE-15018

LibreOffice started to show GUI in a mono-spaced font after 0.4.10-dev-466-g
35f62fc5ba0b69e7335ff41400cb3b45660f4557

We can fix this by partial revert
as proposed by Katayama Hirofumi MZ, who was author of those changes as well.
We revert the changes in penalty system here.